--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "moduleResolution": "node",
     "sourceMap": true,
     "target": "es5",
+    "typeRoots": ["./node_modules/@types"],
     "types": ["gapi", "gapi.auth2"]
   },
   "include": [
